Fixed column header popup overflow and z-index issue

--- a/src/WebComponents/QueryGrid/query-grid.scss
+++ b/src/WebComponents/QueryGrid/query-grid.scss
@@ -87,8 +87,6 @@
         }
 
         &.left {
-            left: var(--vi-query-grid--data-offset);
-
             button[header] {
                 background: linear-gradient(to left, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 25%,rgba(255,255,255,1) 100%);
             }
